<resources>
    <string name="app_name">ACF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="instruction">Sign in with your data that you entered during registration</string>
    <string name="press_here">Press Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Login</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Coupons</string>
    <string name="tab_text_2">Expired</string>
</resources>